tests/transpiler/x/clj/two-sum.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:42:03 GMT+7
(ns main)

(def result (twoSum [2 7 11 15] 9))

(defn -main []
  (defn twoSum [nums target]
    (def n (count nums))
    (doseq [i (range 0 n)] (doseq [j (range (+ i 1) n)] (if (= (+ (nth nums i) (nth nums j)) target) [i j] nil)))
    [(- 1) (- 1)])
  (println (nth result 0))
  (println (nth result 1)))

(-main)
